Schedule one-off fix, minor fixes
The schedule code should now be able to handle one-offs inside of cycles properly.  I hate datetime code, doubly so in javascript.
Minor fixes for the capsule icons in dark mode being rectangular and the winter stockpile icon being cut off.

--- a/missions.css
+++ b/missions.css
@@ -143,6 +143,7 @@ input:checked + .slider:before {
 
 .infoButton, .infoButton:hover, .infoButton:focus {
   text-decoration: none;
+  vertical-align: middle;
 }
 
 .infoButton:hover {
